unsafe: add more exhaustive tests to PVarHandle
other changes:
- replaced some calls to MethodHandles.publicLookup() with MethodHandles.lookup(), so that module access permissions are respected
- added support for emulating array element VarHandles on Java 8